# Floyo-Sticky-Note

./: .gitignore  CHANGES-figma-node-bottom-design.md  NODE_SPEC.md  README.md  SELF_TEST.js  __init__.py  nodes.py  pyproject.toml
.github/workflows/: publish_action.yml
web/js/: README.md  floyo_sticky_note.js  floyo_sticky_note_editor_cursor_title_final_fix.js  floyo_sticky_note_editor_cursor_title_fix.js  floyo_sticky_note_editor_cursor_title_owner_fix.js  floyo_sticky_note_editor_interactions_fix.js  floyo_sticky_note_editor_media_fix.js  floyo_sticky_note_editor_modal_scroll_fix.js  floyo_sticky_note_editor_paragraph_copy_fix.js  floyo_sticky_note_figma_bottom_fix.js  floyo_sticky_note_new_frontend_chrome_fix.js  floyo_sticky_note_notch_polish_fix.js  floyo_sticky_note_notch_stabilize_fix.js  floyo_sticky_note_raspberry_display_fix.js  floyo_sticky_note_remote_compat.js  floyo_sticky_note_text_size_fix.js  floyo_sticky_note_title_persist_fix.js  floyo_sticky_note_ui_runtime_patch.js  floyo_sticky_note_visual_compat.js  floyo_sticky_note_visual_footer_icons_fix.js  floyo_sticky_note_visual_notch_surface_fix.js  floyo_sticky_note_visual_notch_surface_owner_fix.js  floyo_sticky_note_visual_outer_chrome_fix.js  floyo_sticky_note_visual_toolbar_undo_fix.js  floyo_sticky_note_visual_triangle_notch_fix.js  floyo_sticky_note_visual_unified_notch_fix.js  floyo_sticky_note_visual_zero_top_line_fix.js  floyo_sticky_note_visual_zoom_notch_fix.js  floyo_sticky_note_visual_zoom_notch_thin_outline_fix.js  floyo_sticky_note_wheel_capture_guard.js  zz_floyo_sticky_live_patch.js  (+9 more)
